- The maximal supported resolution is increased from 1600x1200 to 2048x1536
- GLBoom will use the closest supported resolution when running fullscreen
- The "RUN" key inverts the autorun state
- Fixed OpenGL sky rendering in Requiem and Memento Mori
- The "Show coordinates of automap pointer" setting works now
- fix translucency map file handle leak
- fix consistency failures in netgames

Changes from v2.4.2 to v2.4.3
- Massive speed improvements in higher resolutions taken from Eternity.
  Thanks to SoM and Quasar!!!
- fix bugs in gameplay occuring with gcc-4.1
- Mac OS X: Add "Show Game Folder" to menus, for easy installation of new
  game wads
- Mac OS X: Disable games in popup menu whose wads cannot be found
- fix compilation warnings
- tidy up configure script

Changes from v2.4.1 to v2.4.2
- Move gamma correction tables into prboom.wad
- Clean up light level calculations for walls & sprites
- CheckIWAD uses ANSI C streams for better portability and error handling
- Make screen wipe time independent of resolution
- Applied various small cleanups and fixes from PrBoom 2.3.1
- Fix problems with dehacked substitution of long strings
- End of level sound crash fixed
- Mac OS X: Added simple launcher which allows to configure the most common
  settings
- Mac OS X: Uses Quicktime for music now to fix crashes (adapted from Jaakko
  Keränen's work in Doomsday)
- Windows: Converted project files to free Visual Studio 2005 Express Edition

Changes from v2.4.0 to v2.4.1
- PrBoom demos are now recorded with high-precision turning (like the
  "Doom v1.91" hack that is floating around)
- when both -nodraw and -nosound are supplied, then no graphics will be
  initialized and no windows opened
- add ultdoom compatibility level, and bring compatibility levels into line
  with Prboom+
- screenshots now use correct palette in software mode
- screenshots now in PNG format on Linux/Unix where available
- suppress use-supershotgun key in compatibility mode